// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpensesSummary with 0 expenses 1`] = `
<div>
  <p>
    Viewing 0 expenses totalling $0.00
  </p>
</div>
`;

exports[`render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $1.95
  </p>
</div>
`;

exports[`render ExpensesSummary with more than 1 expenses 1`] = `
<div>
  <p>
    Viewing 3 expenses totalling $241.95
  </p>
</div>
`;
